--- a/data_preparation/multi_modality/process_speech/prepare_speech_image_sft_data.ipynb
+++ b/data_preparation/multi_modality/process_speech/prepare_speech_image_sft_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Add speech ID and filter text\n",
+    "## Part 1. Add speech ID and filter text\n",
     "### Read data"
    ]
   },
@@ -38,7 +38,7 @@
     "new_sft_data_list = []\n",
     "for cnt, item in enumerate(sft_data):\n",
     "    new_item = copy.deepcopy(item)\n",
-    "    new_item[\"speech_id\"] = \"mgm_instruction_clear_\" + str(cnt)\n",
+    "    new_item[\"speech_id\"] = \"lyra_mm_\" + str(cnt)\n",
     "    new_sft_data_list.append(new_item)\n",
     "\n",
     "print(len(new_sft_data_list))\n",
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Reorganize SFT annotation data\n",
+    "## Part 2. Reorganize SFT annotation data\n",
     "### tag all successfully generated speeches"
    ]
   },
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mgm_sft_speech_path = \"mgm_sft_speech/Lyra_speeches\"\n",
+    "mgm_sft_speech_path = \"Lyra_MM\"\n",
     "mgm_sft_speech_ids = {}\n",
     "import os\n",
     "for speech_path in os.listdir(mgm_sft_speech_path):\n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "short_path = \"mgm_sft_speech/Lyra_speeches\"\n",
+    "short_path = \"Lyra_MM\"\n",
     "sft_data_path= 'mgm_instruction_clear_with_speechid.json'\n",
     "sft_data = json.load(open(sft_data_path))\n",
     "new_text_list = []\n",
